--- a/templates/auteurs/voir_auteur.twig
+++ b/templates/auteurs/voir_auteur.twig
@@ -16,5 +16,5 @@
         <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/Blog_Bibliotheque_symfony/Blog/src/Controller/AuteursController.php'|file_link(0) }}">src/Controller/AuteursController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/Blog_Bibliotheque_symfony/Blog/templates/auteurs/voir_auteur.html.twig'|file_link(0) }}">templates/auteurs/index.html.twig</a></code></li>
     </ul>
-</div>
+</div>.
 {% endblock %}
